app/styles/main.scss
/* ... */
/******************
*** HEADER
*******************/
.header {
  @include page-container;
  background-color: $acc-light;
  border-radius: 0 0 10px 10px;
  padding: 5px 0;

  .logo {
    margin-top: -44px;
  }

  .before {
    color: $comp1-dark;
    margin: 0;
  }

  .criticalmass {
    color: $comp2-dark;
    margin: -10px 0 4px 0;
  }

  a {
    text-decoration: none;
  }

  .tag-line {
    float: right;
    padding: 15px 560px 0 0;
  }

  .yelp {
    margin: 0;
  }

  .hate {
    margin: 0 0 0 24px;
  }

  div {
    display: inline-block;
  }

  .addthis_toolbox {
    float: right;
    margin: -65px 10px 0 0;
  }
}


/******************
*** FOOTER
*******************/
.footer {
  @include page-container;
  background-color: $acc-light;
  border-radius: 10px;
  padding: 11px 0 4px 0;
  text-align: center;

  li {
    display: inline;
    padding: 40px;

    a {
      color: $text-dark;
      font-size: 16px;

      &:hover {
        color: $cf-few;
        text-decoration: none; 
      }
    }
  }
}

/******************
*** MAIN PAGE 
*******************/
#main-page {
  text-align: center;

  .spot-types {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 0;

    .spots {
      padding: 0 0 0 10px;

      &:hover {
        cursor: pointer;
      }
    }

    .arrow-side {
      height: 50px;
      margin-top: -25px;
      padding: 0 5px 0 5px;
      width: 60px;
    }

    .arrow-center {
      height: 35px;
      width: 10px
    }

    .spot {
      display: inline-block;
      padding: 20px;
      margin: 0 10px;
    }

    .b4cm-icon {
      margin-top: -10px;
    }

    .center {
      display: inline-block;
    }

    h3 {
      display: inline-block;
    }

    .type-blurb {
      text-align: left;

      h4:nth-child(2) {
        margin: -10px 0 0 30px;
      }
    }
  }

  .nearby {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 25px 0;
  }

  .visualize {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 0;

    .visualize-tagline {
      text-align: left;
      margin: 0 auto;
    }

    h2 {
      margin: 0 0 0 160px;
    }

    h2:nth-child(2) {
      margin: 0 0 0 26%;
    }

  }
}


/******************
*** Listings Page 
*******************/
#listings-page {

  .title-bar {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;

    .main-col {
      text-align: center;
      padding-top: 50px;
    }

    .b4cm-icon {
      margin-top: -5px;
    }

    h2 {
      display: inline-block;
      padding: 0 0 0 20px;
    }

    h3 {
      display: inline-block;
      margin-left: 50px;
    }

    form {
      margin: 5px 0 0 100px;
    }

    h4 {
      display: inline-block;
    }

    select {
      margin: -10px 0 0 10px;
      width: 80px;
    }

    input {
      margin: -10px 0 0 10px;
      text-align: center;
      width: 150px;
    }

    button {
      margin: -10px 0 0 10px;
    }
  }

 .page {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 10px;
  }
  
  .listings {
    
    h6 {
      margin-top: -40px;
    }

    .add-spot {
      float: right;
      margin-top: -55px;
    }

  }

  .listing {
    margin: 0 0 10px 0;
    padding: 0 10px;

    &:hover {
      cursor: pointer;
    }

    h4, h5 {
      margin: 0px;
    }

    .rank, .info, .crowd-bar, .watchers, .box {
      display: inline-block;
    }

    .rank {
      float: left;
    }

    .spot-pic {
      display: inline-block;
      padding: 0 5px;
      margin-top: -95px;
    }

    .info {
      padding: 0 0 0 5px;
    }

    .watchers {
      margin: 0 0 0 5px;
    }

    .crowd-rank {
      margin: 5px 0 0 0;
    }

    .box {
      height: 30px;
      width: 30px;

      h6 {
        display: inline;
        float: left;
        font-size: 10px;
        margin: 15px 0 0 2px;
      }
    }

    .watchers {
      float: right;
      margin: 5px 0 0 10px;
    }

    hr {
      margin-top: 15px;
      width: 100%;
    }

    .current-status {
      display: inline-block;
      float: left;
      margin: -90px 0 0 430px;
    }

    .status {
      margin: 0 0 0 68px;
    }

  }

  .map {
    margin: 0 0 0 20px;
  }

  .more {
    margin: -10px 0 0 0;

    a { 
      color: $text-dark;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}
/* ... */

